--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Image Index</h1>
     <ul>
-        <li><a href="images/image1.jpg">Image 1</a></li>
+        <li><a href="images/articles/Article_1.jpg">Image 1</a></li>
         <li><a href="images/image2.jpg">Image 2</a></li>
         <!-- Add more list items for each image -->
     </ul>
